Fix footer padding on small devices

--- a/src/components/footer-css.module.css
+++ b/src/components/footer-css.module.css
@@ -69,7 +69,7 @@
     .footerText {
         padding: 0;
         text-align: left;
-        padding-left:10px;
+        padding-left:20px;
     }
 
 
